# CudaGEMMOptimization

./: .clang-format  .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
csrc/: 01_naiveSGEMM.cu  02_coalesceMemoryAccess.cu  03_sharedMemBlockSGEMM.cu  04_sgemm1DBlockTiling.cu  05_sgemm2DBlockTiling.cu  06_sgemmVectorize.cu  07a_smem_arrangement.cu  08_loadToSMEM.cu  09_warpTiling.cu  10_prefetch.cu  loadToReg.cu  naiveSGEMM.cu  sgemmVectorize.cu
diagrams/: prefetch.excalidraw  warpTiling.excalidraw
profiling/configs/: sgemm.ncu-cfg
profiling/profiles/: 01_naiveSGEMM.ncu-rep  02_coalesceMemoryAccess.ncu-rep  03_sharedMemBlockSGEMM.ncu-rep  04_sgemm1DBlockTiling.ncu-rep  07a_smem_arrangement.ncu-rep  09_warpTiling.ncu-rep  10_prefetch.ncu-rep  coalesceMemoryAccess.ncu-rep  loadToReg.ncu-rep  loadToSMEM.ncu-rep  naiveSGEMM.ncu-rep  sgemm1DBlockTiling.ncu-rep  sgemm2DBlockTiling.ncu-rep  sgemmVectorize.ncu-rep  sgemmVectorize_bk_16.ncu-rep  sgemmVectorize_bk_8.ncu-rep  sharedMemBlockSGEMM.ncu-rep  warpTiling.ncu-rep
